Demo-2/binding.yaml
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "replicalimit-binding-test.profcloud.com"
spec:
  policyName: "replicalimit-policy.profcloud.com"
  paramRef:
    name: "test.profcloud.com"
    namespace: default
  matchResources:
    namespaceSelector:
      matchLabels:
        environment: test
