Demo-2/policy.yaml
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicy
metadata:
  name: "replicalimit-policy.profcloud.com"
spec:
  failurePolicy: Fail
  paramKind:
    apiVersion: profcloud.com/v1
    kind: ReplicaLimit
  matchConstraints:
    resourceRules:
      - apiGroups:   ["apps"]
        apiVersions: ["v1"]
        operations:  ["CREATE", "UPDATE"]
        resources:   ["deployments"]
  validations:
    - expression: "object.spec.replicas >= params.spec.minReplicas"
      reason: Invalid
      message: Invalid as replicas should be greater than 3 for HA
